--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=spring
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.jpa.hibernate.ddl-auto=update 
-spring.datasource.url=jdbc:mysql://localhost:3306/trans
+spring.datasource.url=jdbc:mysql://localhost:3306/mypayapp
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
